RESOLVED FIXED305246
Lots of CPU time under `traverseForPaintInvalidation`
https://bugs.webkit.org/show_bug.cgi?id=305246
Summary Lots of CPU time under `traverseForPaintInvalidation`
Simon Fraser (smfr)
Reported 2026-01-09 19:15:37 PST
We're setting power regressions related to time spent in `traverseForPaintInvalidation`. <rdar://165376215>
Attachments
Simon Fraser (smfr)
Comment 1 2026-01-09 19:24:50 PST
EWS
Comment 2 2026-01-12 10:00:24 PST
Committed 305476@main (2c03fdfa8727): <https://commits.webkit.org/305476@main> Reviewed commits have been landed. Closing PR #56380 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.